Allow canceling in-progress off thread ion compilations, bug 785761. r=dvander