js/src/ion/IonAnalysis.h
@@ -22,13 +22,13 @@ bool
 SplitCriticalEdges(MIRGraph &graph);
 
 bool
-EliminatePhis(MIRGraph &graph);
+EliminatePhis(MIRGenerator *mir, MIRGraph &graph);
 
 bool
-EliminateDeadCode(MIRGraph &graph);
+EliminateDeadCode(MIRGenerator *mir, MIRGraph &graph);
 
 bool
-ApplyTypeInformation(MIRGraph &graph);
+ApplyTypeInformation(MIRGenerator *mir, MIRGraph &graph);
 
 bool
 RenumberBlocks(MIRGraph &graph);
