js/src/ion/LICM.cpp
@@ -8,6 +8,7 @@
 #include <stdio.h>
 
 #include "Ion.h"
+#include "IonBuilder.h"
 #include "IonSpewer.h"
 #include "LICM.h"
 #include "MIR.h"
@@ -74,8 +75,8 @@ ion::ExtractLinearInequality(MTest *test, BranchDirection direction,
     return true;
 }
 
-LICM::LICM(MIRGraph &graph)
-  : graph(graph)
+LICM::LICM(MIRGenerator *mir, MIRGraph &graph)
+  : mir(mir), graph(graph)
 {
 }
 
@@ -93,7 +94,7 @@ LICM::analyze()
             continue;
 
         // Attempt to optimize loop.
-        Loop loop(header->backedge(), header, graph);
+        Loop loop(mir, header->backedge(), header, graph);
 
         Loop::LoopReturn lr = loop.init();
         if (lr == Loop::LoopReturn_Error)
@@ -108,8 +109,9 @@ LICM::analyze()
     return true;
 }
 
-Loop::Loop(MBasicBlock *footer, MBasicBlock *header, MIRGraph &graph)
-  : graph(graph),
+Loop::Loop(MIRGenerator *mir, MBasicBlock *footer, MBasicBlock *header, MIRGraph &graph)
+  : mir(mir),
+    graph(graph),
     footer_(footer),
     header_(header)
 {
@@ -181,6 +183,9 @@ Loop::optimize()
     IonSpew(IonSpew_LICM, "These instructions are in the loop: ");
 
     while (!worklist_.empty()) {
+        if (mir->shouldCancel("LICM (worklist)"))
+            return false;
+
         MInstruction *ins = popFromWorklist();
 
         IonSpewHeader(IonSpew_LICM);
