js/src/jsworkers.cpp
@@ -98,8 +98,12 @@ js::CancelOffThreadIonCompile(JSCompartment *compartment, JSScript *script)
     /* Wait for in progress entries to finish up. */
     for (size_t i = 0; i < state.numThreads; i++) {
         const WorkerThread &helper = state.threads[i];
-        while (helper.ionScript && CompiledScriptMatches(compartment, script, helper.ionScript))
+        while (helper.ionBuilder &&
+               CompiledScriptMatches(compartment, script, helper.ionBuilder->script()))
+        {
+            helper.ionBuilder->cancel();
             state.wait(WorkerThreadState::MAIN);
+        }
     }
 
     ion::OffThreadCompilationVector &compilations = ion->finishedOffThreadCompilations();
@@ -276,7 +280,7 @@ WorkerThread::threadLoop()
     state.lock();
 
     while (true) {
-        JS_ASSERT(!ionScript);
+        JS_ASSERT(!ionBuilder);
 
         while (state.ionWorklist.empty()) {
             if (terminate) {
@@ -286,22 +290,21 @@ WorkerThread::threadLoop()
             state.wait(WorkerThreadState::WORKER);
         }
 
-        ion::IonBuilder *builder = state.ionWorklist.popCopy();
-        ionScript = builder->script();
+        ionBuilder = state.ionWorklist.popCopy();
 
-        JS_ASSERT(ionScript->ion == ION_COMPILING_SCRIPT);
+        JS_ASSERT(ionBuilder->script()->ion == ION_COMPILING_SCRIPT);
 
         state.unlock();
 
         {
-            ion::IonContext ictx(NULL, ionScript->compartment(), &builder->temp());
-            builder->backgroundCompiledLir = ion::CompileBackEnd(builder);
+            ion::IonContext ictx(NULL, ionBuilder->script()->compartment(), &ionBuilder->temp());
+            ionBuilder->backgroundCompiledLir = ion::CompileBackEnd(ionBuilder);
         }
 
         state.lock();
 
-        ionScript = NULL;
-        FinishOffThreadIonCompile(builder);
+        FinishOffThreadIonCompile(ionBuilder);
+        ionBuilder = NULL;
 
         /*
          * Notify the main thread in case it is waiting for the compilation to
